# mcmct4c

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt  main.c
app/tests/: CMakeLists.txt  app_test.c
libs/: CMakeLists.txt
libs/bar/: CMakeLists.txt
libs/bar/bravo/: CMakeLists.txt
libs/bar/bravo/inc/: bravo.h
libs/bar/bravo/src/: bravo.c
libs/bar/inc/: bar.h
libs/bar/src/: bar_interface.c  bar_internal.c  bar_internal.h
libs/bar/tests/: CMakeLists.txt  bar_test.c
libs/foo/: CMakeLists.txt
libs/foo/inc/: foo.h
libs/foo/src/: foo_interface.c  foo_internal.c  foo_internal.h
libs/foo/tests/: CMakeLists.txt  foo_test_1.c  foo_test_2.c
libs/inner/: CMakeLists.txt
libs/inner/inc/: inner.h
libs/inner/src/: inner.c
libs/middle/: CMakeLists.txt
libs/middle/inc/: middle.h
libs/middle/src/: middle.c
libs/outer/: CMakeLists.txt
libs/outer/inc/: outer.h
libs/outer/src/: outer.c
libs/outer_test/: CMakeLists.txt
libs/outer_test/src/: main.c
